# revers

./: .clippy.toml  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.github/workflows/: do-checks.yaml
src/: main.rs
src/subcommands/: changelog.rs  commit_hashes.rs  commit_messages.rs  mod.rs  version.rs
