# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "revers"
version = "0.1.0"
readme = "README.md"
homepage = "https://github.com/ScarletFlash/revers/"
repository = "https://github.com/ScarletFlash/revers/"
license-file = "LICENSE.md"
edition = "2021"
publish = false

[dependencies]
git2 = "0.13"
